--- a/ru/coding/directives.html
+++ b/ru/coding/directives.html
@@ -30,7 +30,7 @@
 
 По умолчанию компилятор загружает версию `<текущий режим>.1.0000`
 
-## $VERSION\_RESTORE
+## $VERSION_RESTORE
 
 {% hint style="warning" %}
 Эта директива не используется начиная с версии v3.1.0
