--- a/ru/edit-modes/README.html
+++ b/ru/edit-modes/README.html
@@ -264,7 +264,9 @@ Sanny Builder предлагает много различных режимов,
 
 Чтобы переключить режим редактирования, кликните в правом нижнем углу программы. Появится список доступных режимов. Выберите нужный и кликните по нему. Sanny Builder загрузит все требуемые файлы и вы сразу можете продолжить работу.
 
-![](../.gitbook/assets/edit_modes.png)
+:::c
+![](../img/edit_modes.png)
+:::
 
 Выбрать режим через командную строку можно с [опцией](../editor/cli.md#mode) `--mode`. Чтобы выбрать режим по умолчанию для какой-либо игры, используйте [опцию](../editor/cli.md#game) `--game`.
 
