--- a/ru/edit-modes/code-templates.html
+++ b/ru/edit-modes/code-templates.html
@@ -38,7 +38,9 @@ end // for
 
 Можно сохранить новый шаблон прямо из редактора. Для этого нужно выделить нужный кусок текста и выбрать меню `Сервис->Добавить шаблон`. 
 
-![](../.gitbook/assets/add-templates-ru.png)
+:::c
+![](../img/ide-add-template-en.png)
+:::
 
 Введите имя шаблона, описание \(необязательно\), выберите тип шаблона и нажмите кнопку `OK`. Новый шаблон будет сразу же готов к использованию.
 
