--- a/ru/editor/features.html
+++ b/ru/editor/features.html
@@ -19,7 +19,9 @@ Sanny Builder Library - это портал, наполняемый сообще
 
 Если выбранный режим редактирования использует документацию из библиотеки, в нижней панели будет отображаться её версия , например `SBL v0.119`. Версия может отличаться в разных режимах.
 
-![](../.gitbook/assets/sbl-update-popup-ru.png)
+:::center
+![](../img/sbl-update-popup-en.png)
+:::
 
 При клике по версии в нижней панели будет показано всплывающее меню, из которого можно проверить наличие новых обновлений и скачать их. Если включить опцию `Обновлять автоматически при запуске`, Sanny Builder будет проверять обновления и скачивать их автоматически при каждом запуске.
 
@@ -73,7 +75,7 @@ Sanny Builder Library - это портал, наполняемый сообще
 
 Можно записывать последовательность нажатия клавиш \(макрос\) и воспроизводить ее позднее. Например, есть следующий код:
 
-```text
+```sb3
 $Actor = Actor.Create(CivMale, #MALE01, 100.0, 100.0, 10.0)
 $ActorWithGun = Actor.Create(CivMale, #MALE01, 110.0, 100.0, 20.0)
 $Gang01 = Actor.Create(CivMale, #MALE01, 120.0, 100.0, 30.0)
@@ -97,7 +99,7 @@ $ActorWithoutGun = Actor.Create(CivMale, #MALE01, 150.0, 100.0, 60.0)
 
 Теперь первые две строки выглядят так:
 
-```text
+```sb3
 $ActorWithGun = Actor.Create(CivMale, 100.0, 100.0, 10.0)
 $Actor = Actor.Create(CivMale, 110.0, 100.0, 20.0)
 ```
@@ -112,7 +114,7 @@ Sanny Builder допускает использовать имя миссии в
 
 Например, у вас есть 
 
-```text
+```sb3
 DEFINE MISSION 10 AT @MYMISSION
 ```
 
