--- a/ru/editor/options/general.html
+++ b/ru/editor/options/general.html
@@ -11,31 +11,41 @@
 
 Данная вкладка содержит общие настройки программы.
 
-![](../../.gitbook/assets/options-general-ru.png)
+:::l
+![](../../img/options-general-en.png)
+:::
 
 
 
 ## Директория игры
 
-![](../../.gitbook/assets/general01.gif)
+:::l
+![](../../img/main_dir.png)
+:::
 
 Путь к папке, где установлена игра для текущего [режима редактирования](../../edit-modes/). Путь можно ввести вручную или выбрать через диалог, появляющийся при нажатии кнопки.
 
 ## Язык интерфейса
 
-![](../../.gitbook/assets/language-select-ru.png)
+:::l
+![](../../img/general-language-en.png)
+:::
 
 Список доступных языков для интерфейса программы. Сами переводы находится в папке `lang`. Информацию о создании новых переводов можно найти на [sannybuilder/translations](https://github.com/sannybuilder/translations).
 
 ## Привязка файловых расширений
 
-![](../../.gitbook/assets/associate-ru.png)
+:::l
+![](../../img/sb-options-associate.png)
+:::
 
 Файлы с отмеченными расширениями по умолчанию открываются в Sanny Builder. Для отмены ассоциации, снимите галочку.
 
 ## Настройки
 
-![](../../.gitbook/assets/general05.gif)
+:::l
+![](../../img/main_opt.png)
+:::
 
 ### Перезапись выходного файла
 
