--- a/ru/editor/options/hotkeys.html
+++ b/ru/editor/options/hotkeys.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-![](../../.gitbook/assets/options-hotkeys-ru.png)
+:::l
+![](../../img/options-hotkeys-en.png)
+:::
 
 Некоторые [горячие клавиши](../hotkeys.md) могут быть изменены для вашего удобства. Вы можете установить новые сочетания кнопок для вызова инструментов, действий редактора и некоторых других возможностей.
 
