--- a/ru/editor/options/theme-editor.html
+++ b/ru/editor/options/theme-editor.html
@@ -11,7 +11,9 @@
 
 **Редактор тем** - это встроенная утилита, которая заменяет вкладку настроек подсветки синтаксиса. Он может быть запущен из вкладки [Редактор](editor.md#tema-oformleniya).
 
-![](../../.gitbook/assets/theme-editor-ru.png)
+:::l
+![](../../img/theme-editor-en.png)
+:::
 
 Для кастомизации доступны цвета и стили некоторых элементов интерфейса и кода.
 
