--- a/ru/editor/console.html
+++ b/ru/editor/console.html
@@ -13,6 +13,10 @@
 
 Окно консоли открывается нажатием `Ctrl+~`. Для запуска команды введите ее в верхнем поле и нажмите `Enter`. Консоль покажет результат.
 
+:::l
+![](../img/console.png)
+:::
+
 ## Доступные команды 
 
 Все команды являются регистронезависимыми.
@@ -31,37 +35,55 @@
 
 ## Отладочные опции
 
-### CODE\_OFFSETS
+### CODE_OFFSETS
 
 Дизассемблер выводит для каждой команды ее адрес в файле \(смещение от начала\).
 
-### VAR\_COUNTER
+### VAR_COUNTER
 
 После компиляции в консоли содержится список [глобальных переменных](../coding/variables.md#globalnye-peremennye), которые были использованы только один раз \(неиспользуемые переменные, которые можно удалить или заменить на [локальные переменные](../coding/variables.md#lokalnye-peremennye)\).
 
-### IGNORE\_UNKNOWN
+### IGNORE_UNKNOWN
 
 Дизассемблер игнорирует ошибки в исходном коде \(неизвестные опкоды, неверные типы данных, нарушения формата файла\). Это помогает открыть большинство скриптов, которые были скомпилированы некорректно.
 
-### CONSTANT\_INDEXES
+### CONSTANT_INDEXES
 
 Выводит элементы массива как глобальные переменные с индексом. Доступно для режимов `GTA SA`, `LCS`, `VCS`. 
 
 Например, если в исходном файл был массив из трех элементов, начинающийся с `$10`, то при переключении этой опции переменные в дизассемблированном файле будут выглядеть следующим образом:
 
-| `Без CONSTANT_INDEXES` | С `CONSTANT_INDEXES` |
-| :--- | :--- |
-| $10 | $10\[0\] |
-| $11 | $10\[1\] |
-| $12 | $10\[2\] |
+<table>
+<thead>
+<tr>
+<th>`Без CONSTANT_INDEXES`</th>
+<th>С `CONSTANT_INDEXES`</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>$10</td>
+<td>$10[0]</td>
+</tr>
+<tr>
+<td>$11</td>
+<td>$10[1]</td>
+</tr>
+<tr>
+<td>$12</td>
+<td>$10[2]</td>
+</tr>
+</tbody>
+</table>
 
-### SKIP\_SCM\_HEADER
+
+### SKIP_SCM_HEADER
 
 Дизассемблер пропускает чтение заголовка `.scm` файла. Это позволяет открывать скрипты в которых заголовка нет \(например, скрипты из файла `script.img` или CLEO скрипты\).
 
 Также при включении этой опции Sanny Builder компилирует `.scm` файлы без заголовка \(альтернативно использованию [директивы](../coding/directives.md#usdexternal) `{$EXTERNAL}`\).
 
-### SKIP\_EXTRA\_INFO
+### SKIP_EXTRA_INFO
 
 Дизассемблер игнорирует секцию с [дополнительной информацией](options/general.md#dobavlyat-dopolnitelnuyu-informaciyu-v-scm) в конце скрипта. Эта секция будет рассматриваться как набор SCM инструкций, поэтому рекомендуется дополнительно включить опцию `IGNORE_UNKNOWN`.
 
@@ -73,14 +95,40 @@ Sanny Builder предлагает несколько способов для п
 
 Запуск программы через командную строку с [параметром](cli.md#debug) `--debug` является способом одновременно переключить несколько опций. Запустите `sanny.exe` с параметром `--debug X`, где `X` это последовательность `0` и `1`.  Каждая цифра в последовательности означает определенную опцию:
 
-| Индекс | Отладочная опция |
-| :--- | :--- |
-| 1 | CODE\_OFFSETS |
-| 2 | IGNORE\_UNKNOWN |
-| 3 | VAR\_COUNTER |
-| 4 | CONSTANT\_INDEXES |
-| 5 | SKIP\_SCM\_HEADER |
-| 6 | SKIP\_EXTRA\_INFO |
+<table>
+<thead>
+<tr>
+<th>Индекс</th>
+<th>Отладочная опция</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>CODE_OFFSETS</td>
+</tr>
+<tr>
+<td>2</td>
+<td>IGNORE_UNKNOWN</td>
+</tr>
+<tr>
+<td>3</td>
+<td>VAR_COUNTER</td>
+</tr>
+<tr>
+<td>4</td>
+<td>CONSTANT_INDEXES</td>
+</tr>
+<tr>
+<td>5</td>
+<td>SKIP_SCM_HEADER</td>
+</tr>
+<tr>
+<td>6</td>
+<td>SKIP_EXTRA_INFO</td>
+</tr>
+</tbody>
+</table>
 
 ```text
 sanny.exe --debug 110000
@@ -92,7 +140,9 @@ sanny.exe --debug 110000
 
 Клик по самой правой кнопке на панели инструментов открывает выпадающее меню со списком опций:
 
-![](../.gitbook/assets/debug_options.PNG)
+:::center
+![](../img/sb-debug-options-dropdown.png)
+:::
 
 Каждый элемент списка переключает одну из опций. Изменение будет сразу доступно для использования.
 
