--- a/ru/editor/opcode-search-tool.html
+++ b/ru/editor/opcode-search-tool.html
@@ -11,7 +11,9 @@
 
 Вызвать поиск опкодов можно нажатием `Ctrl+Alt+2` или выбрав меню `Сервис->Инструменты->Поиск опкодов`.
 
-![](../.gitbook/assets/ost.PNG)
+:::center
+![](../img/ost.png)
+:::
 
 Чтобы найти нужный опкод, впишите в верхнем поле слова, соответствующие ему, например `actor car`. В списке останутся команды, содержащие эти слова. Вписывайте уточняющие слова, пока нужный опкод не будет найден. При поиске можно пользоваться специальными операторами \(подробнее о них ниже\).
 
