--- a/ru/editor/options/editor.html
+++ b/ru/editor/options/editor.html
@@ -11,17 +11,23 @@
 
 На данной вкладке вы можете изменить настройки IDE.
 
-![](../../.gitbook/assets/options-editor-ru.png)
+:::l
+![](../../img/options-editor-en.png)
+:::
 
 ## Тема оформления
 
-![](../../.gitbook/assets/options-theme-select-ru.png)
+:::l
+![](../../img/sb-options-color-theme.png)
+:::
 
 Здесь вы можете выбрать одну из готовых тем оформления, изменяющих внешний вид программы и правила подсветки синтаксиса. Кнопка Изменить запускает [Редактор тем](theme-editor.md).
 
 ## Глубина просмотра кода
 
-![](../../.gitbook/assets/editor02.gif)
+:::l
+![](../../img/editor-code-scan-en.png)
+:::
 
 Значение глубины просмотра используется при построении списка [констант](../../coding/constants.md), [меток](../../coding/data-types.md#metki) и [переменных](../../coding/variables.md) после нажатия комбинации `Ctrl+пробел`. Это значение говорит редактору, как много строк кода нужно просмотреть в обе стороны от текущей строки. Если указано значение `0`, программа будет искать указанные элементы по всему файлу.
 
@@ -29,13 +35,17 @@
 
 ## Шрифт
 
-![](../../.gitbook/assets/editor04.gif)
+:::l
+![](../../img/editor-font-en.png)
+:::
 
 Здесь вы можете выбрать шрифт и его настройки для редактора. Sanny Builder поддерживает только [моноширинные шрифты](https://ru.wikipedia.org/wiki/%D0%9C%D0%BE%D0%BD%D0%BE%D1%88%D0%B8%D1%80%D0%B8%D0%BD%D0%BD%D1%8B%D0%B9_%D1%88%D1%80%D0%B8%D1%84%D1%82). Строка `AaBbCcDd` отражает текущие настройки.
 
 ## Настройки
 
-![](../../.gitbook/assets/options-editor-settings.ru.png)
+:::l
+![](../../img/sb-editor-configuration.png)
+:::
 
 `Показывать главную панель` – показать/спрятать панель с кнопками в главном окне редактора  
 `Показывать информацию об опкодах` – отображать [различную информацию](../features.md#pokaz-razlichnoi-informacii-o-tekushem-opkode) в статусной строке внизу экрана   
