--- a/ru/editor/options/formats.html
+++ b/ru/editor/options/formats.html
@@ -11,13 +11,17 @@
 
 На данной вкладке вы можете настроить имена для выходных файлов, форматы меток, регистры строковых литералов и т.д.
 
-![](../../.gitbook/assets/options-format-ru.png)
+:::l
+![](../../img/options-format-en.png)
+:::
 
 ## Имена файлов
 
 Настройка для имен файлов, получаемых после дизассемблирования и компиляции. 
 
-![](../../.gitbook/assets/nastroiki_2.png)
+:::l
+![](../../img/formats-files-en.png)
+:::
 
 В верхнем поле указывается формат для текстового файла, в который записывается содержимое дизассемблированого скрипта. В нижних двух – форматы для бинарных файлов `SCM` и `IMG` \(в [режиме](../../edit-modes/) `GTA SA`\), содержащих скомпилированные скрипты. 
 
@@ -39,7 +43,9 @@
 
 Формат меток, который используется при дизассемблировании скриптов.
 
-![](../../.gitbook/assets/labels-format-ru.png)
+:::l
+![](../../img/formats-labels-en.png)
+:::
 
 ### Смещение от начала файла
 
@@ -61,7 +67,9 @@
 
 Опции, которые указывают дизассемблеру использовать имена, определенные пользователем во внешних файлах.
 
-![](../../.gitbook/assets/format03.gif)
+:::l
+![](../../img/formats-custom-names-en.png)
+:::
 
 Имена меток содержатся в файле [`CustomLabels.ini`](../../edit-modes/customlabels.ini.md). Файл представляет собой список имен меток и их смещений от начала файла. Если данная опция выбрана, дизассемблер при соответствии позиции метки в исходном файле одной из позиций в данном списке, назовет метку так, как указано в списке. 
 
@@ -75,7 +83,9 @@
 
 ## Регистр букв
 
-![](../../.gitbook/assets/format04.gif)
+:::l
+![](../../img/formats-case-en.png)
+:::
 
 Эта опция имеет 2 значения. Дизассемблер, используя данную опцию, будет именовать [глобальные переменные](../../coding/variables.md#globalnye-peremennye), [метки](../../coding/data-types.md#metki), [массивы ](../../coding/arrays.md)в указанном регистре букв. Компилятор будет записывать [строковые литералы](../../coding/data-types.md#strokovye-literaly) также в указанном регистре.
 
