Spanish translated files

--- a/es/edit-modes/README.html
+++ b/es/edit-modes/README.html
@@ -113,7 +113,7 @@ Los archivos `.dat` contienen rutas a otros archivos `.ide`.
 
 El elemento `ide` puede tener un atributo `base` opcional para especificar una carpeta que se utiliza para resolver rutas relativas en el archivo `.dat`.
 
-```
+```xml
 &lt;ide base="@game:\">default.dat&lt;/ide>
 ```
 
