--- a/es/errors.html
+++ b/es/errors.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 <head>
-	<title>Error Messages</title>
+	<title>Mensajes de Error</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 <body>
-Sanny Builder throws error or warning messages if something went wrong. This section describes all known messages and what the tool expects from you.
+Sanny Builder arroja mensajes de error o advertencia si algo salió mal. En esta sección se describen todos los mensajes conocidos y lo que la herramienta espera de usted.
 
 :::cols-6 pre p-4 center
 [0001](#0001)
