--- a/es/scm-documentation/ascii-character-codes.html
+++ b/es/scm-documentation/ascii-character-codes.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>ASCII Character Codes</title>
+	<title>Códigos de Caracteres ASCII</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,8 +14,8 @@
 <table>
 <thead>
 <tr>
-<th>Character</th>
-<th>id</th>
+<th>Carácter</th>
+<th>ID</th>
 </tr>
 </thead>
 <tbody></tbody>
@@ -25,10 +25,10 @@
 
 <script>
 const keys=[
-["Horizontal Tabulation (HT)",9],
-["Newline Character (LF)",10],
-["Carriage Return (CR)",13],
-["Space",32],
+["Tabulador Horizontal  (HT)",9],
+["Salto de Línea (LF)",10],
+["Retorno de Carro (CR)",13],
+["Espacio",32],
 ["!",33],
 ["\"",34],
 ["#",35],
