--- a/es/scm-documentation/gta-limits.html
+++ b/es/scm-documentation/gta-limits.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GTA Limits</title>
+  <title>Limites de GTA</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,7 +22,7 @@
 </thead>
 <tbody>
 <tr>
-<td>**main size (in bytes)**</td>
+<td>**tamaño principal (en bytes)**</td>
 <td>131072</td>
 <td>225512</td>
 <td>200000</td>
@@ -31,7 +31,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**mission size (in bytes)**</td>
+<td>**tamaño de la misión (en bytes)**</td>
 <td>32768</td>
 <td>35000</td>
 <td>69000</td>
@@ -40,7 +40,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**number of missions**</td>
+<td>**numero de misiones**</td>
 <td>120</td>
 <td>120</td>
 <td>200</td>
@@ -49,7 +49,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**mission cleanup list**</td>
+<td>**lista de limpieza de la misión**</td>
 <td>50</td>
 <td>50</td>
 <td>75</td>
@@ -58,7 +58,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**model names (2nd segment)**</td>
+<td>**nombres de modelos (2do segmento)**</td>
 <td>200</td>
 <td>220</td>
 <td>395</td>
@@ -67,7 +67,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**running scripts**</td>
+<td>**scripts corriendo**</td>
 <td>128</td>
 <td>128</td>
 <td>96</td>
@@ -76,16 +76,16 @@
 <td></td>
 </tr>
 <tr>
-<td>**local variables**</td>
-<td>16+2 [timers](../coding/variables.md#timer-variables)</td>
-<td>16+2 [timers](../coding/variables.md#timer-variables)</td>
-<td><p>32+2 [timers](../coding/variables.md#timer-variables)</p><p>1024 total in missions</p></td>
-<td>40+2 [timers](../coding/variables.md#timer-variables)</td>
-<td>96+2 [timers](../coding/variables.md#timer-variables)</td>
+<td>**variables locales**</td>
+<td>16+2 [temporizadoras](../coding/variables.md#timer-variables)</td>
+<td>16+2 [temporizadoras](../coding/variables.md#timer-variables)</td>
+<td><p>32+2 [temporizadoras](../coding/variables.md#timer-variables)</p><p>1024 en misiones</p></td>
+<td>40+2 [temporizadoras](../coding/variables.md#timer-variables)</td>
+<td>96+2 [temporizadoras](../coding/variables.md#timer-variables)</td>
 <td></td>
 </tr>
 <tr>
-<td>**gosub nesting levels**</td>
+<td>**gosubs anidados**</td>
 <td>4</td>
 <td>6</td>
 <td>8</td>
@@ -94,7 +94,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**text draw**</td>
+<td>**dibujo de texto**</td>
 <td>2</td>
 <td>48</td>
 <td>96</td>
@@ -103,7 +103,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**jump table labels**</td>
+<td>**saltos en tablas de etiquetas**</td>
 <td>N/A</td>
 <td>N/A</td>
 <td>75</td>
@@ -112,7 +112,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**external scripts**</td>
+<td>**scripts externos**</td>
 <td>N/A</td>
 <td>N/A</td>
 <td>82</td>
@@ -121,7 +121,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**external script attachments**</td>
+<td>**adjuntos de script externos**</td>
 <td>N/A</td>
 <td>N/A</td>
 <td>70</td>
@@ -130,7 +130,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**car generators**</td>
+<td>**generadores de coches**</td>
 <td>160</td>
 <td>185</td>
 <td>500</td>
@@ -139,7 +139,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**radar blips**</td>
+<td>**elementos en el radar**</td>
 <td>32</td>
 <td>75</td>
 <td>175</td>
@@ -148,7 +148,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**pickups**</td>
+<td>**recogibles**</td>
 <td>336</td>
 <td>336</td>
 <td>620</td>
@@ -157,7 +157,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**last opcode**</td>
+<td>**ultimo opcode**</td>
 <td>0481</td>
 <td>05a8</td>
 <td>0a4e</td>
@@ -166,7 +166,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**spheres**</td>
+<td>**esferas de misiones**</td>
 <td>16</td>
 <td>16</td>
 <td>16</td>
@@ -175,7 +175,7 @@
 <td></td>
 </tr>
 <tr>
-<td>**car saving garage types**</td>
+<td>**tipos de garajes para guardar coches**</td>
 <td>16..18</td>
 <td>16..18, 24..32</td>
 <td>16..18, 24..32, 39..45</td>
@@ -196,7 +196,7 @@
 </table>
 
 {% hint style="info" %}
-Originally posted by CyQ on [GTAForums.com](http://www.gtaforums.com/index.php?showtopic=213017\&view=findpost\&p=3145932)
+Publicado originalmente por CyQ en [GTAForums.com](http://www.gtaforums.com/index.php?showtopic=213017\&view=findpost\&p=3145932)
 {% endhint %}
 
 <script src="../../js/main.min.js"></script>
