--- a/es/scm-documentation/lcs/weapons.html
+++ b/es/scm-documentation/lcs/weapons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Weapon IDs</title>
+  <title>Armas</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,9 +16,9 @@
 <table>
 <thead>
 <tr>
-<th>Weapon ID</th>
-<th>Model ID</th>
-<th>Name</th>
+<th>ID</th>
+<th>Modelo</th>
+<th>Nombre</th>
 </tr>
 </thead>
 <tbody>
