--- a/es/scm-documentation/sa/buttons.html
+++ b/es/scm-documentation/sa/buttons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Button IDs</title>
+  <title>Botones</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,36 +10,36 @@
 <body>
 
 ```sb3
-00E1: key_pressed 0 &lt;button&gt;
+00E1: key_pressed 0 &lt;botón&gt;
 ```
 
 <table>
 <thead>
 <tr>
-<th>Button</th>
+<th>Botón</th>
 <th>Enum</th>
-<th>On foot</th>
-<th>In a vehicle</th>
+<th>De pie</th>
+<th>En vehículo</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>0</td>
 <td>LEFTSTICKX</td>
-<td>Left / Right</td>
-<td>Steer Left / Right</td>
+<td>Izquierda / Derecha</td>
+<td>Girar a la Izquierda / Derecha</td>
 </tr>
 <tr>
 <td>1</td>
 <td>LEFTSTICKY</td>
-<td>Forward / Backwards</td>
-<td>Steer Forward / Backward</td>
+<td>Avansar / Retroceder</td>
+<td>Dirigir hacia Adelante / Atrás</td>
 </tr>
 <tr>
 <td>2</td>
 <td>RIGHTSTICKX</td>
-<td>Special Ctrl Left / Right</td>
-<td>Turret Left / Right</td>
+<td>Rodar a la Izquierda / Derecha</td>
+<td>Torreta Izquierda / Derecha</td>
 </tr>
 <tr>
 <td>3</td>
