--- a/es/scm-documentation/sa/clothes.html
+++ b/es/scm-documentation/sa/clothes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Player Clothes</title>
+  <title>Ropa del Jugador</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
 <body>
 
 ```sb3
-Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt;)
+Player.SetClothes($PLAYER_CHAR, &lt;textura&gt;, &lt;modelo&gt;, &lt;parte del cuerpo&gt;)
 ```
 
 ## Torso
@@ -18,10 +18,10 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>[Body part](player-body-parts.html)</th>
-<th>Description</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>[Parte del Cuerpo](player-body-parts.html)</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
@@ -441,10 +441,10 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>Parte del cuerpo</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
@@ -726,10 +726,10 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>Parte del cuerpo</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
@@ -969,10 +969,10 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>Parte del cuerpo</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
@@ -1056,10 +1056,10 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>Parte del cuerpo</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
@@ -1143,10 +1143,10 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>Parte del cuerpo</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
@@ -1260,10 +1260,10 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>Parte del cuerpo</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
@@ -1617,10 +1617,10 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>Parte del cuerpo</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
