--- a/es/scm-documentation/sa/gangs.html
+++ b/es/scm-documentation/sa/gangs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gang IDs</title>
+  <title>Pandillas</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
 <table>
 <thead>
 <tr>
-<th>Name</th><th>ID</th><th>GXT</th>
+<th>Nombre</th><th>ID</th><th>GXT</th>
 </tr>
 </thead>
 <tbody></tbody>
