--- a/es/scm-documentation/sa/garages.html
+++ b/es/scm-documentation/sa/garages.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Garage IDs</title>
+  <title>Garajes</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,10 +16,10 @@ Garage.Activate('BODLAWN')
 <table>
 <thead>
 <tr>
-<th>Name</th>
-<th>Position</th>
-<th>Description</th>
-<th>Notes</th>
+<th>Nombre</th>
+<th>Posición</th>
+<th>Descripción</th>
+<th>Notas</th>
 </tr>
 </thead>
 <tbody>
