--- a/es/scm-documentation/sa/haircuts.html
+++ b/es/scm-documentation/sa/haircuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Haircuts</title>
+  <title>Peinados</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,16 +10,16 @@
 <body>
 
 ```sb3
-Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt;)
+Player.SetClothes($PLAYER_CHAR, &lt;textura&gt;, &lt;modelo&gt;, &lt;parte del cuerpo&gt;)
 ```
 
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>[Body part](player-body-parts.html)</th>
-<th>Description</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>[Parte del Cuerpo](player-body-parts.html)</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
