--- a/es/scm-documentation/sa/particles.html
+++ b/es/scm-documentation/sa/particles.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Particle Effects</title>
+  <title>Partículas</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,8 +14,8 @@
 <table>
 <thead>
 <tr>
-<th>Description</th>
-<th>Particle</th>
+<th>Descripción</th>
+<th>Partícula</th>
 </tr>
 </thead>
 <tbody>
