--- a/es/scm-documentation/sa/radar-icons.html
+++ b/es/scm-documentation/sa/radar-icons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Radar Icons</title>
+  <title>Iconos Radar</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,7 @@
 <table>
 <thead>
 <tr>
-<th>Description</th>
+<th>Descripción</th>
 <th>ID</th>
 <th>GUI</th>
 <th>GXT</th>
