--- a/es/scm-documentation/sa/stats.html
+++ b/es/scm-documentation/sa/stats.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Statistics ID</title>
+  <title>Estadisticas</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-`0` to `81` - floating-point values; `82+` - integer values.
+Del `0` al `81` - valores decimales; `82+` - valores enteros.
 
 <table>
 <thead>
 <tr>
 <th>ID</th>
-<th>Description</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
