--- a/es/scm-documentation/sa/tattoos.html
+++ b/es/scm-documentation/sa/tattoos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tattoos</title>
+  <title>Tatuajes</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
 <body>
 
 ```sb3
-Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt;)
+Player.SetClothes($PLAYER_CHAR, &lt;textura&gt;, &lt;modelo&gt;, &lt;parte del cuerpo&gt;)
 ```
 
 ## Lower left arm
@@ -18,11 +18,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>(Parte del Cuerpo)[player-body-parts.md]</th>
+<th>Nombre</th>
+<th>Imagen</th>
 </tr>
 </thead>
 <tbody>
@@ -53,11 +53,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>(Parte del Cuerpo)[player-body-parts.md]</th>
+<th>Nombre</th>
+<th>Imagen</th>
 </tr>
 </thead>
 <tbody>
@@ -95,11 +95,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>(Parte del Cuerpo)[player-body-parts.md]</th>
+<th>Nombre</th>
+<th>Imagen</th>
 </tr>
 </thead>
 <tbody>
@@ -137,11 +137,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>(Parte del Cuerpo)[player-body-parts.md]</th>
+<th>Nombre</th>
+<th>Imagen</th>
 </tr>
 </thead>
 <tbody>
@@ -179,11 +179,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>(Parte del Cuerpo)[player-body-parts.md]</th>
+<th>Nombre</th>
+<th>Imagen</th>
 </tr>
 </thead>
 <tbody>
@@ -242,11 +242,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>(Parte del Cuerpo)[player-body-parts.md]</th>
+<th>Nombre</th>
+<th>Imagen</th>
 </tr>
 </thead>
 <tbody>
@@ -298,11 +298,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>(Parte del Cuerpo)[player-body-parts.md]</th>
+<th>Nombre</th>
+<th>Imagen</th>
 </tr>
 </thead>
 <tbody>
@@ -361,11 +361,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>(Parte del Cuerpo)[player-body-parts.md]</th>
+<th>Nombre</th>
+<th>Imagen</th>
 </tr>
 </thead>
 <tbody>
@@ -424,11 +424,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Textura</th>
+<th>Modelo</th>
+<th>(Parte del Cuerpo)[player-body-parts.md]</th>
+<th>Nombre</th>
+<th>Imagen</th>
 </tr>
 </thead>
 <tbody>
