--- a/es/scm-documentation/sa/vehicle-variations.html
+++ b/es/scm-documentation/sa/vehicle-variations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vehicle Variations</title>
+  <title>Variaciones de Vehículos</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
 <body>
 
 ```sb3
-0506: set_vehicle_model #PONY next_variation &lt;variantA&gt; &lt;variantB&gt;
+0506: set_vehicle_model #PONY next_variation &lt;varianteA&gt; &lt;varianteB&gt;
 ```
 
 For most vehicles, only one extra can be added so both the second and third parameters should be set to the same wanted variant to avoid confusion. However, some vehicles can have 2 different extras active.
