--- a/es/scm-documentation/sa/zones.html
+++ b/es/scm-documentation/sa/zones.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Zones</title>
+  <title>Zonas</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,13 +9,13 @@
 </head>
 <body>
 ```sb3
-0767: set_zone 'CARSO' type &lt;type&gt;
+0767: set_zone 'CARSO' type &lt;tipo&gt;
 ```
 <table>
 <thead>
 <tr>
-<th>Type</th>
-<th>Description</th>
+<th>Tipo</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
