--- a/es/scm-documentation/vc/buttons.html
+++ b/es/scm-documentation/vc/buttons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Button IDs</title>
+  <title>Butones</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,10 +16,10 @@
 <table>
 <thead>
 <tr>
-<th>Button</th>
+<th>Botón</th>
 <th>Enum</th>
-<th>On foot</th>
-<th>In a vehicle</th>
+<th>De pie</th>
+<th>En un vehículo</th>
 </tr>
 </thead>
 <tbody>
