--- a/es/scm-documentation/vc/garages.html
+++ b/es/scm-documentation/vc/garages.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Garage IDs</title>
+  <title>Garajes</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
 <tr>
 <th>ID</th>
 <th>Enum</th>
-<th>Description</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
