--- a/es/scm-documentation/vc/weapons.html
+++ b/es/scm-documentation/vc/weapons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Weapon IDs</title>
+  <title>Armas</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,17 +10,17 @@
 <body>
 
 ```sb3
-04B8: get_char_weapon &lt;char&gt; in_slot_id &lt;slot&gt; type_to &lt;type&gt; ammo_to &lt;ammo&gt; model_to &lt;model&gt; 
+04B8: get_char_weapon &lt;actor> in_slot_id &lt;casilla> type_to &lt;tipo> ammo_to &lt;munición> model_to &lt;modelo> 
 ```
 
 <table>
 <thead>
 <tr>
-<th>Type</th>
-<th>Slot</th>
-<th>Name</th>
-<th>Model</th>
-<th>Icon</th>
+<th>Tipo</th>
+<th>Casilla</th>
+<th>Nombre</th>
+<th>Modelo</th>
+<th>Icono</th>
 </tr>
 </thead>
 <tbody>
