--- a/es/version-history.html
+++ b/es/version-history.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <title>Version History</title>
+  <title>Historial de Versiones</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,9 +22,9 @@
 * updated translations to Hungarian, Spanish, Ukrainian and Chinese languages
 * [fixed 16 bugs](https://github.com/sannybuilder/dev/issues/130#issue-805022048)
 
-:clap: Kudos to contributors to this release: [forms55](https://github.com/forms55), [MatiDragon](https://github.com/MatiDragon-YT), [Vital](https://github.com/VitalRus95), [wmysterio](https://github.com/wmysterio), [XMDS](https://github.com/XMDS)
-
-[Complete list of changes](https://github.com/sannybuilder/dev/issues/130)
+:clap: Felicitaciones a los colaboradores de este lanzamiento: [forms55](https://github.com/forms55), [MatiDragon](https://github.com/MatiDragon-YT), [Vital](https://github.com/VitalRus95), [wmysterio](https://github.com/wmysterio), [XMDS](https://github.com/XMDS)\
+\
+[Lista completa de cambios](https://github.com/sannybuilder/dev/issues/130)
 
 ## v. 3.7.0 - 30.01.2021
 
