--- a/es/edit-modes/opcodes-list-scm.ini.html
+++ b/es/edit-modes/opcodes-list-scm.ini.html
@@ -95,7 +95,7 @@ Por convención, una descripción de un opcode condicional comienza con dos espa
 
 Un parámetro es una parte dinámica del opcode. Empiezan y terminan con `%`
 
-```
+```ini
 0001=1,wait %1d% ms
 ```
 
@@ -107,7 +107,7 @@ Un parámetro consta de dos partes: un 'número' y un 'tipo'.
 
 El número en el parámetro `%1d%` es su índice. La idea es que algunos opcodes tengan sus parámetros reorganizados para hacer que el código fuente sea más legible.
 
-```
+```ini
 0053=5,%5d% = create_player %1o% at %2d% %3d% %4d%
 ```
 
