--- a/es/scm-documentation/lcs/clothes.html
+++ b/es/scm-documentation/lcs/clothes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Player Clothes</title>
+  <title>Ropa del Jugador</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
 <thead>
 <tr>
 <th>ID</th>
-<th>Name</th>
+<th>Nombre</th>
 </tr>
 </thead>
 <tbody>
