--- a/es/scm-documentation/sa/pedtypes.html
+++ b/es/scm-documentation/sa/pedtypes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ped Types</title>
+  <title>Tipos de Actores</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,14 +10,14 @@
 <body>
 
 ```sb3
-009A: $Actor = create_actor &lt;type&gt; #MODEL at X Y Z 
+009A: $Actor = create_actor &lt;tipo&gt; #MODEL at X Y Z 
 ```
 
 <table>
 <thead>
 <tr>
-<th>Type</th>
-<th>Description</th>
+<th>Tipo</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
