--- a/es/scm-documentation/sa/trains.html
+++ b/es/scm-documentation/sa/trains.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Train Types</title>
+  <title>Tipos de Trenes</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,19 +10,19 @@
 <body>
 
 ```sb3
-06D8: 1@ = create_train_at 2278.1771 -1144.8823 27.5108 type &lt;type&gt; direction 1
+06D8: 1@ = create_train_at 2278.1771 -1144.8823 27.5108 type &lt;tipo&gt; direction 1
 ```
 
 <table>
 <thead>
 <tr>
-<th>Type</th>
-<th>Engine</th>
-<th>Carriage 1</th>
-<th>Carriage 2</th>
-<th>Carriage 3</th>
-<th>Carriage 4</th>
-<th>Carriage 5</th>
+<th>Tipo</th>
+<th>Maquina</th>
+<th>Carril 1</th>
+<th>Carril 2</th>
+<th>Carril 3</th>
+<th>Carril 4</th>
+<th>Carril 5</th>
 </tr>
 </thead>
 <tbody>
