--- a/es/scm-documentation/vc/radar-icons.html
+++ b/es/scm-documentation/vc/radar-icons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Radar Icons</title>
+  <title>Iconos del Radar</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +12,8 @@
 <thead>
 <tr>
 <th>ID</th>
-<th>Icon</th>
-<th>Description</th>
+<th>Icono</th>
+<th>Descripción</th>
 </tr>
 </thead>
 <tbody>
